loading images callback

--- a/public/areas_data.json
+++ b/public/areas_data.json
@@ -1,116 +1,196 @@
 {
     "data": [
         {
-            "label": "1",
-            "x": 23,
-            "y": 10,
-            "w": 200,
-            "h": 99
+            "file": "area_04.png",
+            "sprites": [
+                {
+                    "label": "1",
+                    "x": 23,
+                    "y": 10,
+                    "w": 200,
+                    "h": 99
+                },
+                {
+                    "label": "2",
+                    "x": 69,
+                    "y": 138,
+                    "w": 246,
+                    "h": 170
+                },
+                {
+                    "label": "3",
+                    "x": 358,
+                    "y": 54,
+                    "w": 162,
+                    "h": 261
+                },
+                {
+                    "label": "4",
+                    "x": 541,
+                    "y": 143,
+                    "w": 137,
+                    "h": 339
+                },
+                {
+                    "label": "5",
+                    "x": 623,
+                    "y": 8,
+                    "w": 230,
+                    "h": 198
+                },
+                {
+                    "label": "6",
+                    "x": 6,
+                    "y": 319,
+                    "w": 144,
+                    "h": 138
+                },
+                {
+                    "label": "7",
+                    "x": 147,
+                    "y": 408,
+                    "w": 192,
+                    "h": 209
+                },
+                {
+                    "label": "8",
+                    "x": 666,
+                    "y": 466,
+                    "w": 234,
+                    "h": 219
+                },
+                {
+                    "label": "9",
+                    "x": 917,
+                    "y": 516,
+                    "w": 133,
+                    "h": 124
+                },
+                {
+                    "label": "10",
+                    "x": 11,
+                    "y": 679,
+                    "w": 287,
+                    "h": 221
+                },
+                {
+                    "label": "11",
+                    "x": 332,
+                    "y": 678,
+                    "w": 274,
+                    "h": 287
+                },
+                {
+                    "label": "12",
+                    "x": 627,
+                    "y": 714,
+                    "w": 296,
+                    "h": 230
+                },
+                {
+                    "label": "13",
+                    "x": 885,
+                    "y": 928,
+                    "w": 174,
+                    "h": 139
+                },
+                {
+                    "label": "14",
+                    "x": 885,
+                    "y": 928,
+                    "w": 174,
+                    "h": 139
+                },
+                {
+                    "label": "15",
+                    "x": 413,
+                    "y": 526,
+                    "w": 131,
+                    "h": 107
+                },
+                {
+                    "label": "16",
+                    "x": 820,
+                    "y": 240,
+                    "w": 189,
+                    "h": 174
+                }
+            ]
         },
         {
-            "label": "2",
-            "x": 69,
-            "y": 138,
-            "w": 246,
-            "h": 170
-        },
-        {
-            "label": "3",
-            "x": 358,
-            "y": 54,
-            "w": 162,
-            "h": 261
-        },
-        {
-            "label": "4",
-            "x": 541,
-            "y": 143,
-            "w": 137,
-            "h": 339
-        },
-        {
-            "label": "5",
-            "x": 623,
-            "y": 8,
-            "w": 230,
-            "h": 198
-        },
-        {
-            "label": "6",
-            "x": 6,
-            "y": 319,
-            "w": 144,
-            "h": 138
-        },
-        {
-            "label": "7",
-            "x": 147,
-            "y": 408,
-            "w": 192,
-            "h": 209
-        },
-        {
-            "label": "8",
-            "x": 666,
-            "y": 466,
-            "w": 234,
-            "h": 219
-        },
-        {
-            "label": "9",
-            "x": 917,
-            "y": 516,
-            "w": 133,
-            "h": 124
-        },
-        {
-            "label": "10",
-            "x": 11,
-            "y": 679,
-            "w": 287,
-            "h": 221
-        },
-        {
-            "label": "11",
-            "x": 332,
-            "y": 678,
-            "w": 274,
-            "h": 287
-        },
-        {
-            "label": "12",
-            "x": 627,
-            "y": 714,
-            "w": 296,
-            "h": 230
-        },
-        {
-            "label": "13",
-            "x": 885,
-            "y": 928,
-            "w": 174,
-            "h": 139
-        },
-        {
-            "label": "14",
-            "x": 885,
-            "y": 928,
-            "w": 174,
-            "h": 139
-        },
-        {
-            "label": "15",
-            "x": 413,
-            "y": 526,
-            "w": 131,
-            "h": 107
-        },
-        {
-            "label": "16",
-            "x": 820,
-            "y": 240,
-            "w": 189,
-            "h": 174
+            "file": "area_05.png",
+            "sprites": [
+                {
+                    "label": "17",
+                    "x": 32,
+                    "y": 29,
+                    "w": 243,
+                    "h": 203
+                },
+                {
+                    "label": "18",
+                    "x": 324,
+                    "y": 23,
+                    "w": 218,
+                    "h": 219
+                },
+                {
+                    "label": "19",
+                    "x": 632,
+                    "y": 37,
+                    "w": 274,
+                    "h": 281
+                },
+                {
+                    "label": "20",
+                    "x": 0,
+                    "y": 272,
+                    "w": 478,
+                    "h": 205
+                },
+                {
+                    "label": "21",
+                    "x": 530,
+                    "y": 317,
+                    "w": 468,
+                    "h": 285
+                },
+                {
+                    "label": "22",
+                    "x": 18,
+                    "y": 495,
+                    "w": 305,
+                    "h": 294
+                },
+                {
+                    "label": "23",
+                    "x": 374,
+                    "y": 596,
+                    "w": 270,
+                    "h": 246
+                },
+                {
+                    "label": "24",
+                    "x": 732,
+                    "y": 617,
+                    "w": 332,
+                    "h": 319
+                },
+                {
+                    "label": "25",
+                    "x": 110,
+                    "y": 864,
+                    "w": 298,
+                    "h": 197
+                },
+                {
+                    "label": "26",
+                    "x": 468,
+                    "y": 906,
+                    "w": 209,
+                    "h": 145
+                }
+            ]
         }
     ]
 }
